2006-06-11  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/eval.h: Added number of variables to user defined function struct.

	* src/command.c (define): Recorded number of variables into udf entry.

	* src/parse.c (add_is_udf, is_ud_functin, add_udf): 
	Slight rearranging of functions to allow code reuse.

	* src/parse.c (parse_primary_expression): Check if function used in
	command is user defined.  If so, verify number of variables is correct.

	* src/internal.c (f_call, f_calln): Added tests to catch variable
	mismatch at time of evaluation.

2006-06-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/Mafefile.in (CORETERM): Add wxt.trm in the list of
	terminals.

	* docs/gnuplot.doc : Add mentions of `wxt` among other terminals when
	useful (mouse, raise, lower, image, set_output, fillstyles).

	* src/wxterminal/wxt_gui.cpp:
	Fix compilation with --disable-with-image.

	* src/wxterminal/wxt_gui.h:
	Fix compilation with --disable-with-image.
	Cleanup includes.

	* src/wxterminal/gp_cairo.c
	(gp_cairo_draw_polygon): Replace malloc by gp_alloc.
	(gp_cairo_draw_image): Likewise.
	(gp_cairo_convert_symbol_to_unicode): Likewise.

2006-06-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h src/internal.c src/internal.h src/parse.c
	src/standard.c src/standard.h docs/gnuplot.doc NEWS:

	Deprecate built-in pseudo-function  `if defined(foo)`
	Replace it with string function exists("foo")
	The previous version (defined) tried to bypass normal expression
	parsing, but succeeded only for the simplest cases. This variant,
	although deprecated, is still supported by BACKWARDS_COMPATIBLE.
	The new version handles the full general case by using string variables.
	Bugfix: #1497957

	* src/color.c (make_palette): Revert optimization (18 Mar 2006) that
	only sent palette information for a plot if it had changed since the 
	previous plot.  This doesn't work for PostScript output, because the
	pages may be viewed out of order.  Bugfix.
