@@ -1,5 +1,5 @@
 /*
- * $Id: wxt.trm,v 1.6 2006/06/04 23:16:05 tlecomte Exp $
+ * $Id: wxt.trm,v 1.7 2006/06/12 04:26:45 tlecomte Exp $
  */
 
 /* GNUPLOT - wxt.trm */
@@ -274,10 +274,10 @@ START_HELP(wxt)
 "1 wxt",
 "?set terminal wxt",
 "?wxt",
-" The `wxt` terminal device generates output in a separate window. The window ",
-" is created by the wxWidgets library, where the 'wxt' comes from.",
-" The actual drawing is done via cairo, a 2D graphics library.",
-" Text is handled by pango, a library for laying out and rendering text.",
+" The `wxt` terminal device generates output in a separate window. The window",
+" is created by the wxWidgets library, where the 'wxt' comes from. The actual",
+" drawing is done via cairo, a 2D graphics library, and pango, a library for",
+" laying out and rendering text.",
 "",
 " Syntax:",
 "         set term wxt {<n>}",
@@ -290,32 +290,32 @@ START_HELP(wxt)
 "",
 " Multiple plot windows are supported: `set terminal wxt <n>` directs the",
 " output to plot window number n.",
-" The default window title includes this number.",
-" This title can also be specified with the keyword \"title\".",
+"",
+" The default window title is based on the window number. This title can also",
+" be specified with the keyword \"title\".",
 "",
 " Plot windows remain open even when the `gnuplot` driver is changed to a",
 " different device.  A plot window can be closed by pressing the letter q",
 " while that window has input focus, by choosing `close` from a window",
 " manager menu, or with `set term wxt <n> close`.",
-" The size of a plot may be changed by resizing the terminal window.",
-" The aspect ratio of the plot will be conserved, and the contents ",
-" will be scaled, fonts and linewidths included.",
+" The size of a plot may be changed by resizing the terminal window. The aspect",
+" ratio of the plot will be conserved, and the contents will be scaled, fonts",
+" and linewidths included.",
 "",
-" The active plot window (the one selected by `set term wxt <n>`) is interactive.",
-" Its behaviour is shared with other terminal types. See `mouse` for details.",
-" It also has some extra icons, which should be self-explanatory.",
+" The active plot window (the one selected by `set term wxt <n>`) is",
+" interactive. Its behaviour is shared with other terminal types. See `mouse`",
+" for details. It also has some extra icons, which are supposed to be",
+" self-explanatory.",
 "",
-" This terminal supports an enhanced text mode, which allows font",
-" and other formatting commands (subscripts, superscripts, etc.)",
-" to be embedded in labels and other text strings.",
-" The enhanced text mode syntax is shared with other gnuplot",
-" terminal types. See `enhanced` for more details.",
+" This terminal supports an enhanced text mode, which allows font and other",
+" formatting commands (subscripts, superscripts, etc.) to be embedded in labels",
+" and other text strings. The enhanced text mode syntax is shared with other",
+" gnuplot terminal types. See `enhanced` for more details.",
 "",
-" <font> is in the format \"FontFace,FontSize\", i.e. the face and",
-" the size comma-separated in a single string.",
-" FontFace is a usual font face name, such as \'Arial\'.",
-" If you do not provide FontFace, the wxt terminal will use \'Sans\'.",
-" FontSize is the font size, in points. If you do not provide it,",
+" <font> is in the format \"FontFace,FontSize\", i.e. the face and the size",
+" comma-separated in a single string. FontFace is a usual font face name, such",
+" as \'Arial\'. If you do not provide FontFace, the wxt terminal will use",
+" \'Sans\'. FontSize is the font size, in points. If you do not provide it,",
 " the wxt terminal will use a size of 10 points.",
 "    For example :",
 "       set term wxt font \"Arial,12\"",
@@ -323,33 +323,38 @@ START_HELP(wxt)
 "       set term wxt font \",12\" # to change the font size only",
 "       set term wxt font \"\" # to reset the font name and size",
 "",
-" Pango, the library used to layout the text, is based on utf-8.",
-" Thus, the wxt terminal has to convert from your encoding to utf-8.",
-" The default input encoding is based on your \'locale\'.",
-" If you want to use another encoding, make sure gnuplot knows",
-" which one you are using. See `encoding` for more details.",
+" Pango, the library used to layout the text, is based on utf-8. Thus, the wxt",
+" terminal has to convert from your encoding to utf-8. The default input",
+" encoding is based on your \'locale\'. If you want to use another encoding,",
+" make sure gnuplot knows which one you are using. See `encoding` for more",
+" details.",
 "",
-" Note that pango cannot deal with fonts that do not respect",
-" the unicode mapping.",
-" That is the case with the Symbol font. To ensure compatibility",
-" with other terminals, if you choose the Symbol font in enhanced mode",
-" the wxt terminal will use the map provided by http://www.unicode.org/ to",
-" translate character codes to their utf-8 counterparts, and it will use",
-" your current font instead of Symbol.",
-" However, this will not work with other non conform fonts, such as",
-" \"windings\". These fonts may not appear at all.",
+" Pango may give unexpected results with fonts that do not respect the unicode",
+" mapping. With the Symbol font, for example, the wxt terminal will use the map",
+" provided by http://www.unicode.org/ to translate character codes to unicode.",
+" Pango will do its best to find a font containing this character, looking for",
+" your Symbol font, or other fonts with a broad unicode coverage, like the",
+" DejaVu fonts. Note that \"the Symbol font\" is to be understood as the Adobe",
+" Symbol font, distributed with Acrobat Reader as \"SY______.PFB\".",
+" Alternatively, the OpenSymbol font, distributed with OpenOffice.org as",
+" \"opens___.ttf\", offers the same characters. Microsoft has distributed a",
+" Symbol font (\"symbol.ttf\"), but it has a different character set with",
+" several missing or moved mathematic characters. If you experience problems",
+" with your default setup (if the demo enhancedtext.dem is not displayed",
+" properly for example), you probably have to install one of the Adobe or",
+" OpenOffice Symbol fonts, and remove the Microsoft one.",
+" Other non-conform fonts, such as \"wingdings\" have been observed working.",
 "",
-" The rendering of the plot can be done in several ways.",
-" It can be altered with a dialog available from the toolbar.",
-" To obtain the best output possible, the rendering involves three",
+" The rendering of the plot can be altered with a dialog available from the",
+" toolbar. To obtain the best output possible, the rendering involves three",
 " mechanisms : antialiasing, oversampling and hinting.",
 " Antialiasing allows to display non-horizontal and non-vertical lines",
 " smoother.",
 " Oversampling combined with antialiasing provides subpixel accuracy,",
 " so that gnuplot can draw a line from non-integer coordinates. This avoids",
 " wobbling effects on diagonal lines ('plot x' for example).",
-" Hinting avoids the blur on horizontal and vertical caused by oversampling.",
-" The terminal will snap these lines to integer coordinates so that a one-pixel-",
-" wide line will actually be drawn on one and only one pixel."
+" Hinting avoids the blur on horizontal and vertical lines caused by",
+" oversampling. The terminal will snap these lines to integer coordinates so",
+" that a one-pixel-wide line will actually be drawn on one and only one pixel."
 END_HELP(wxt)
 #endif /* TERM_HELP */
